// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<TextField> renders a text field 1`] = `
"<div class=\\"hig__text-field\\">
    <!--ICON-SPACER-->

    <div class=\\"hig__text-field__content\\">
        <div class=\\"hig__text-field__input-wrapper\\">
            <label class=\\"hig__text-field__icon\\" for=\\"text-field-mySpecialField\\"></label>
            <button class=\\"hig__text-field__extra hig__text-field__password-reveal-button\\"></button>
            <button class=\\"hig__text-field__extra hig__text-field__password-hide-button\\"></button>
            <!--EXTRA-->
            <!--SLOT-->
            <input name=\\"mySpecialField\\" id=\\"text-field-mySpecialField\\" class=\\"hig__text-field__input hig__text-field__input--no-value\\" placeholder=\\"\\" value=\\"\\">
            <label for=\\"text-field-mySpecialField\\" class=\\"hig__text-field__label \\"></label>
            <button class=\\"hig__text-field__clear-button\\"></button>
        </div>
        <!--INSTRUCTIONS-->
        <!--REQUIRED-NOTICE-->
    </div>
</div>"
`;

exports[`<TextField> renders a text field with initial props 1`] = `
"<div class=\\"hig__text-field hig__text-field--required\\">
    <!--ICON-SPACER-->
    <div class=\\"hig__text-field__icon-spacer\\"></div>
    <div class=\\"hig__text-field__content\\">
        <div class=\\"hig__text-field__input-wrapper\\">
            <label class=\\"hig__text-field__icon hig__text-field__icon--visible\\" for=\\"text-field-mySpecialField\\"><div class=\\"hig__icon\\"><svg xmlns=\\"http://www.w3.org/2000/svg\\" width=\\"24\\" height=\\"24\\" viewBox=\\"0 0 24 24\\" role=\\"img\\" title=\\"assets-24\\"><title>assets-24</title><g fill=\\"#2e4258\\"><path d=\\"M7,18H3V3H13V6h1V3a1,1,0,0,0-1-1H3A1,1,0,0,0,2,3V18a1,1,0,0,0,1,1H7Z\\"></path><path d=\\"M21,8V21H9V8H21m0-1H9A1,1,0,0,0,8,8V21a1,1,0,0,0,1,1H21a1,1,0,0,0,1-1V8a1,1,0,0,0-1-1Z\\"></path><path d=\\"M19,16v3H11V16h8m1-1H10v5H20V15Z\\"></path><path d=\\"M10,9v5H20V9Zm9,4H16V12H14v1H11V10h8Z\\"></path><polygon points=\\"7 10 5 10 5 5 11 5 11 6 12 6 12 4 4 4 4 11 7 11 7 10\\"></polygon></g></svg></div></label>
            <button class=\\"hig__text-field__extra hig__text-field__password-reveal-button\\"></button>
            <button class=\\"hig__text-field__extra hig__text-field__password-hide-button\\"></button>
            <!--EXTRA-->
            <!--SLOT-->
            <input name=\\"mySpecialField\\" id=\\"text-field-mySpecialField\\" class=\\"hig__text-field__input\\" placeholder=\\"Was it Fluffy?\\" value=\\"Rex\\">
            <label for=\\"text-field-mySpecialField\\" class=\\"hig__text-field__label hig__text-field__label--visible\\">Name of your first pet</label>
            <button class=\\"hig__text-field__clear-button\\"></button>
        </div>
        <p class=\\"hig__text-field__instructions\\">Don't just do something, sit there.</p>
        <!--INSTRUCTIONS-->
        <p class=\\"hig__text-field__required-notice\\">You really must fill this in.</p><!--REQUIRED-NOTICE-->
    </div>
</div>"
`;

exports[`<TextField> renders a text field with udpated props 1`] = `
"<div class=\\"hig__text-field hig__text-field--required\\">
    <div class=\\"hig__text-field__icon-spacer\\"></div><!--ICON-SPACER-->

    <div class=\\"hig__text-field__content\\">
        <div class=\\"hig__text-field__input-wrapper\\">
            <label class=\\"hig__text-field__icon hig__text-field__icon--visible\\" for=\\"text-field-mySpecialField\\"><div class=\\"hig__icon\\"><svg xmlns=\\"http://www.w3.org/2000/svg\\" width=\\"24\\" height=\\"24\\" viewBox=\\"0 0 24 24\\" role=\\"img\\" title=\\"assets-24\\"><title>assets-24</title><g fill=\\"#2e4258\\"><path d=\\"M7,18H3V3H13V6h1V3a1,1,0,0,0-1-1H3A1,1,0,0,0,2,3V18a1,1,0,0,0,1,1H7Z\\"></path><path d=\\"M21,8V21H9V8H21m0-1H9A1,1,0,0,0,8,8V21a1,1,0,0,0,1,1H21a1,1,0,0,0,1-1V8a1,1,0,0,0-1-1Z\\"></path><path d=\\"M19,16v3H11V16h8m1-1H10v5H20V15Z\\"></path><path d=\\"M10,9v5H20V9Zm9,4H16V12H14v1H11V10h8Z\\"></path><polygon points=\\"7 10 5 10 5 5 11 5 11 6 12 6 12 4 4 4 4 11 7 11 7 10\\"></polygon></g></svg></div></label>
            <button class=\\"hig__text-field__extra hig__text-field__password-reveal-button\\"></button>
            <button class=\\"hig__text-field__extra hig__text-field__password-hide-button\\"></button>
            <!--EXTRA-->
            <!--SLOT-->
            <input name=\\"mySpecialField\\" id=\\"text-field-mySpecialField\\" class=\\"hig__text-field__input\\" placeholder=\\"Was it Fluffy?\\" value=\\"Rex\\">
            <label for=\\"text-field-mySpecialField\\" class=\\"hig__text-field__label hig__text-field__label--visible\\">Name of your first pet</label>
            <button class=\\"hig__text-field__clear-button\\"></button>
        </div>
        <p class=\\"hig__text-field__instructions\\">Don't just do something, sit there.</p><!--INSTRUCTIONS-->
        <p class=\\"hig__text-field__required-notice\\">You really must fill this in.</p><!--REQUIRED-NOTICE-->
    </div>
</div>"
`;
